meja/tests/match-exhaustivity.stderr
File "tests/match-exhaustivity.meja", line 4, characters 2-130:
Error: This pattern-matching is not exhausive.
Here are some examples of cases that are not matched:
{d: None | Some ({b: _}), e: `A (_) | `B (false)}
{d: Some ({b: _}), e: `B (true)}
{c: false, d: None, e: `B (true)}
{a: {a: _}, c: true, d: None, e: `B (true)}
